[package]
name = "dit"
version = "0.1.0"
authors = ["filipelbc <filipelbc@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "A work time tracking tool"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
